--- a/index.html
+++ b/index.html
@@ -149,10 +149,8 @@
                 </tr>
                 <tr>
                     <th>Product Size</th>
-                    <td>Length 19
-17cm x Width 19
-17cm x Height 18
-15cm</td>
+                    <td>Large Dia 19cm x Height 18cm</tr>
+                    <td>Small Dia 17cm x Height 15cm</tr>
                 </tr>
                 <tr>
                     <th>Product CBM</th>
@@ -180,15 +178,15 @@
                 </tr>
                 <tr>
                     <th>20 Ft Container Quantity</th>
-                    <td>3428.5714285714284 </td>
+                    <td>3429 </td>
                 </tr>
                 <tr>
                     <th>40 Ft Container Quantity</th>
-                    <td>7384.6153846153848 </td>
+                    <td>7385 </td>
                 </tr>
                 <tr>
                     <th>40 HQ Container Quantity</th>
-                    <td>8703.2967032967026 </td>
+                    <td>8703 </td>
                  </tr>
                 <tr>
                     <th>Price</th>
@@ -211,3 +209,4 @@
     </div>
 </body>
 </html>
+
