--- a/index.html
+++ b/index.html
@@ -150,8 +150,7 @@
                 <tr>
                     <th>Product Size</th>
                     <td>Large Dia 19cm x Height 18cm</tr>
-	<td>Small Dia 17cm x Height 15cm</tr>
-				
+	                <td>Small Dia 17cm x Height 15cm				
                 </tr>
                 <tr>
                     <th>Product CBM</th>
@@ -210,6 +209,7 @@
     </div>
 </body>
 </html>
+
 
 
 
