--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                 </tr>
                 <tr>
                     <th>Product Size</th>
-                    <td>Large Dia 19cm x Height 18cm</tr>
-	                <td>Small Dia 17cm x Height 15cm				
+                    <td>Large Dia 19cm x Height 18cm<br>
+	                Small Dia 17cm x Height 15cm	</tr>			
                 </tr>
                 <tr>
                     <th>Product CBM</th>
@@ -209,6 +209,7 @@
     </div>
 </body>
 </html>
+
 
 
 
